// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Storybook visual-regression / Badge > renders the danger tone 1`] = `
<DocumentFragment>
  <span
    class="inline-flex items-center gap-1.5 rounded-md border px-2 py-0.5 text-[11px] font-medium bg-red-900/40 text-red-300 border-red-800"
  >
    danger
  </span>
</DocumentFragment>
`;

exports[`Storybook visual-regression / Badge > renders the info tone 1`] = `
<DocumentFragment>
  <span
    class="inline-flex items-center gap-1.5 rounded-md border px-2 py-0.5 text-[11px] font-medium bg-blue-900/40 text-blue-300 border-blue-800"
  >
    info
  </span>
</DocumentFragment>
`;

exports[`Storybook visual-regression / Badge > renders the neutral tone 1`] = `
<DocumentFragment>
  <span
    class="inline-flex items-center gap-1.5 rounded-md border px-2 py-0.5 text-[11px] font-medium bg-gray-800/80 text-gray-300 border-gray-700"
  >
    neutral
  </span>
</DocumentFragment>
`;

exports[`Storybook visual-regression / Badge > renders the severity-critical tone 1`] = `
<DocumentFragment>
  <span
    class="inline-flex items-center gap-1.5 rounded-md border px-2 py-0.5 text-[11px] font-medium bg-red-900/60 text-red-200 border-red-700"
  >
    severity-critical
  </span>
</DocumentFragment>
`;

exports[`Storybook visual-regression / Badge > renders the severity-high tone 1`] = `
<DocumentFragment>
  <span
    class="inline-flex items-center gap-1.5 rounded-md border px-2 py-0.5 text-[11px] font-medium bg-orange-900/50 text-orange-300 border-orange-800"
  >
    severity-high
  </span>
</DocumentFragment>
`;

exports[`Storybook visual-regression / Badge > renders the severity-info tone 1`] = `
<DocumentFragment>
  <span
    class="inline-flex items-center gap-1.5 rounded-md border px-2 py-0.5 text-[11px] font-medium bg-slate-800 text-slate-300 border-slate-700"
  >
    severity-info
  </span>
</DocumentFragment>
`;

exports[`Storybook visual-regression / Badge > renders the severity-low tone 1`] = `
<DocumentFragment>
  <span
    class="inline-flex items-center gap-1.5 rounded-md border px-2 py-0.5 text-[11px] font-medium bg-blue-900/40 text-blue-300 border-blue-800"
  >
    severity-low
  </span>
</DocumentFragment>
`;

exports[`Storybook visual-regression / Badge > renders the severity-medium tone 1`] = `
<DocumentFragment>
  <span
    class="inline-flex items-center gap-1.5 rounded-md border px-2 py-0.5 text-[11px] font-medium bg-amber-900/40 text-amber-200 border-amber-800"
  >
    severity-medium
  </span>
</DocumentFragment>
`;

exports[`Storybook visual-regression / Badge > renders the success tone 1`] = `
<DocumentFragment>
  <span
    class="inline-flex items-center gap-1.5 rounded-md border px-2 py-0.5 text-[11px] font-medium bg-green-900/40 text-green-300 border-green-800"
  >
    success
  </span>
</DocumentFragment>
`;

exports[`Storybook visual-regression / Badge > renders the warning tone 1`] = `
<DocumentFragment>
  <span
    class="inline-flex items-center gap-1.5 rounded-md border px-2 py-0.5 text-[11px] font-medium bg-amber-900/40 text-amber-200 border-amber-800"
  >
    warning
  </span>
</DocumentFragment>
`;

exports[`Storybook visual-regression / Button > renders all sizes side-by-side 1`] = `
<DocumentFragment>
  <div
    class="flex gap-2"
  >
    <button
      class="inline-flex items-center justify-center rounded-lg font-medium transition-colors focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-500/60 disabled:cursor-not-allowed bg-blue-600 text-white hover:bg-blue-500 active:bg-blue-700 disabled:bg-blue-600/40 h-7 px-2 text-xs gap-1.5"
      type="button"
    >
      <span>
        XS
      </span>
    </button>
    <button
      class="inline-flex items-center justify-center rounded-lg font-medium transition-colors focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-500/60 disabled:cursor-not-allowed bg-blue-600 text-white hover:bg-blue-500 active:bg-blue-700 disabled:bg-blue-600/40 h-8 px-3 text-xs gap-1.5"
      type="button"
    >
      <span>
        SM
      </span>
    </button>
    <button
      class="inline-flex items-center justify-center rounded-lg font-medium transition-colors focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-500/60 disabled:cursor-not-allowed bg-blue-600 text-white hover:bg-blue-500 active:bg-blue-700 disabled:bg-blue-600/40 h-9 px-4 text-sm gap-2"
      type="button"
    >
      <span>
        MD
      </span>
    </button>
    <button
      class="inline-flex items-center justify-center rounded-lg font-medium transition-colors focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-500/60 disabled:cursor-not-allowed bg-blue-600 text-white hover:bg-blue-500 active:bg-blue-700 disabled:bg-blue-600/40 h-11 px-5 text-sm font-medium gap-2"
      type="button"
    >
      <span>
        LG
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Storybook visual-regression / Button > renders the destructive variant 1`] = `
<DocumentFragment>
  <button
    class="inline-flex items-center justify-center rounded-lg font-medium transition-colors focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-500/60 disabled:cursor-not-allowed bg-red-600 text-white hover:bg-red-500 active:bg-red-700 disabled:bg-red-600/40 h-9 px-4 text-sm gap-2"
    type="button"
  >
    <span>
      Action
    </span>
  </button>
</DocumentFragment>
`;

exports[`Storybook visual-regression / Button > renders the ghost variant 1`] = `
<DocumentFragment>
  <button
    class="inline-flex items-center justify-center rounded-lg font-medium transition-colors focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-500/60 disabled:cursor-not-allowed bg-transparent text-gray-300 hover:bg-gray-800/60 hover:text-gray-100 disabled:text-gray-600 h-9 px-4 text-sm gap-2"
    type="button"
  >
    <span>
      Action
    </span>
  </button>
</DocumentFragment>
`;

exports[`Storybook visual-regression / Button > renders the loading state 1`] = `
<DocumentFragment>
  <button
    aria-busy="true"
    class="inline-flex items-center justify-center rounded-lg font-medium transition-colors focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-500/60 disabled:cursor-not-allowed bg-blue-600 text-white hover:bg-blue-500 active:bg-blue-700 disabled:bg-blue-600/40 h-9 px-4 text-sm gap-2"
    disabled=""
    type="button"
  >
    <span
      aria-hidden="true"
      class="inline-block h-3.5 w-3.5 animate-spin rounded-full border-2 border-current border-r-transparent"
    />
    <span>
      Loading…
    </span>
  </button>
</DocumentFragment>
`;

exports[`Storybook visual-regression / Button > renders the outline variant 1`] = `
<DocumentFragment>
  <button
    class="inline-flex items-center justify-center rounded-lg font-medium transition-colors focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-500/60 disabled:cursor-not-allowed bg-transparent text-gray-300 border border-gray-700 hover:border-gray-600 hover:bg-gray-800/40 disabled:opacity-50 h-9 px-4 text-sm gap-2"
    type="button"
  >
    <span>
      Action
    </span>
  </button>
</DocumentFragment>
`;

exports[`Storybook visual-regression / Button > renders the primary variant 1`] = `
<DocumentFragment>
  <button
    class="inline-flex items-center justify-center rounded-lg font-medium transition-colors focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-500/60 disabled:cursor-not-allowed bg-blue-600 text-white hover:bg-blue-500 active:bg-blue-700 disabled:bg-blue-600/40 h-9 px-4 text-sm gap-2"
    type="button"
  >
    <span>
      Action
    </span>
  </button>
</DocumentFragment>
`;

exports[`Storybook visual-regression / Button > renders the secondary variant 1`] = `
<DocumentFragment>
  <button
    class="inline-flex items-center justify-center rounded-lg font-medium transition-colors focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-500/60 disabled:cursor-not-allowed bg-gray-800 text-gray-200 hover:bg-gray-700 active:bg-gray-700 disabled:bg-gray-800/40 disabled:text-gray-500 h-9 px-4 text-sm gap-2"
    type="button"
  >
    <span>
      Action
    </span>
  </button>
</DocumentFragment>
`;

exports[`Storybook visual-regression / Card > renders a flat card 1`] = `
<DocumentFragment>
  <div
    class="rounded-xl bg-gray-900/40 border border-gray-800/60 p-5"
  >
    Flat surface
  </div>
</DocumentFragment>
`;

exports[`Storybook visual-regression / Card > renders a flush card with a table 1`] = `
<DocumentFragment>
  <div
    class="rounded-xl bg-gray-900/70 border border-gray-800 shadow-md shadow-black/30"
  >
    <table>
      <tbody>
        <tr>
          <td>
            cell
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`Storybook visual-regression / Card > renders a raised card with header / body / footer 1`] = `
<DocumentFragment>
  <div
    class="rounded-xl bg-gray-900/70 border border-gray-800 shadow-md shadow-black/30 p-5"
  >
    <div
      class="flex items-start justify-between gap-3 mb-3"
    >
      <div
        class="min-w-0"
      >
        <h3
          class="text-sm font-semibold text-gray-100"
        >
          Test card
        </h3>
        <p
          class="mt-0.5 text-xs text-gray-500"
        >
          A snapshotted card.
        </p>
      </div>
    </div>
    <div
      class="text-sm text-gray-300"
    >
      The body content.
    </div>
    <div
      class="mt-4 flex items-center justify-end gap-2 border-t border-gray-800/60 pt-3"
    >
      <button
        class="inline-flex items-center justify-center rounded-lg font-medium transition-colors focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-500/60 disabled:cursor-not-allowed bg-transparent text-gray-300 hover:bg-gray-800/60 hover:text-gray-100 disabled:text-gray-600 h-8 px-3 text-xs gap-1.5"
        type="button"
      >
        <span>
          Cancel
        </span>
      </button>
      <button
        class="inline-flex items-center justify-center rounded-lg font-medium transition-colors focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-500/60 disabled:cursor-not-allowed bg-blue-600 text-white hover:bg-blue-500 active:bg-blue-700 disabled:bg-blue-600/40 h-8 px-3 text-xs gap-1.5"
        type="button"
      >
        <span>
          Save
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Storybook visual-regression / EmptyState > renders the default variant 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col items-center justify-center rounded-xl border border-dashed px-6 py-12 text-center border-gray-800 bg-gray-900/30"
    role="status"
  >
    <h3
      class="text-base font-semibold text-gray-100"
    >
      No playbooks yet
    </h3>
    <p
      class="mt-1 max-w-md text-sm text-gray-500"
    >
      Use the button above to create one.
    </p>
  </div>
</DocumentFragment>
`;

exports[`Storybook visual-regression / EmptyState > renders the planned-v1.1 variant 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col items-center justify-center rounded-xl border border-dashed px-6 py-12 text-center border-amber-500/30 bg-amber-500/[0.04]"
    role="status"
  >
    <span
      class="mb-3 inline-flex items-center gap-1 rounded-full border border-amber-500/30 bg-amber-500/10 px-2.5 py-0.5 text-[10px] font-semibold uppercase tracking-wide text-amber-300"
    >
      Planned for v1.1
    </span>
    <h3
      class="text-base font-semibold text-gray-100"
    >
      Coming soon
    </h3>
    <p
      class="mt-1 max-w-md text-sm text-gray-500"
    >
      Available in the next release.
    </p>
  </div>
</DocumentFragment>
`;

exports[`Storybook visual-regression / ErrorState > renders the basic error 1`] = `
<DocumentFragment>
  <div
    class="rounded-xl border border-red-500/30 bg-red-500/5 px-6 py-8 text-center"
    role="alert"
  >
    <div
      class="mx-auto mb-4 flex h-12 w-12 items-center justify-center rounded-full bg-red-500/15 text-red-400"
    >
      <svg
        class="h-6 w-6"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 9v3.75m-9.303 3.376c-.866 1.5.217 3.374 1.948 3.374h14.71c1.73 0 2.813-1.874 1.948-3.374L13.949 3.378c-.866-1.5-3.032-1.5-3.898 0L2.697 16.126zM12 15.75h.007v.008H12v-.008z"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
        />
      </svg>
    </div>
    <h3
      class="text-base font-semibold text-red-200"
    >
      Something went wrong
    </h3>
    <p
      class="mx-auto mt-1 max-w-md text-sm text-red-300/70"
    >
      We couldn't load this view. Try again or check the service status.
    </p>
    <div
      class="mt-5 flex items-center justify-center gap-3"
    />
  </div>
</DocumentFragment>
`;

exports[`Storybook visual-regression / ErrorState > renders the error with a string detail 1`] = `
<DocumentFragment>
  <div
    class="rounded-xl border border-red-500/30 bg-red-500/5 px-6 py-8 text-center"
    role="alert"
  >
    <div
      class="mx-auto mb-4 flex h-12 w-12 items-center justify-center rounded-full bg-red-500/15 text-red-400"
    >
      <svg
        class="h-6 w-6"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 9v3.75m-9.303 3.376c-.866 1.5.217 3.374 1.948 3.374h14.71c1.73 0 2.813-1.874 1.948-3.374L13.949 3.378c-.866-1.5-3.032-1.5-3.898 0L2.697 16.126zM12 15.75h.007v.008H12v-.008z"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
        />
      </svg>
    </div>
    <h3
      class="text-base font-semibold text-red-200"
    >
      Boom
    </h3>
    <p
      class="mx-auto mt-1 max-w-md text-sm text-red-300/70"
    >
      A test boom.
    </p>
    <pre
      class="mx-auto mt-4 max-w-xl overflow-x-auto rounded-md bg-black/30 px-3 py-2 text-left font-mono text-xs text-red-300/80"
    >
      HTTP 500
    </pre>
    <div
      class="mt-5 flex items-center justify-center gap-3"
    />
  </div>
</DocumentFragment>
`;

exports[`Storybook visual-regression / Skeleton > renders a single skeleton 1`] = `
<DocumentFragment>
  <div
    class="animate-pulse bg-gradient-to-r from-gray-800/40 via-gray-700/40 to-gray-800/40 bg-[length:200%_100%] rounded-md h-4 w-32"
    style="animation: skeleton-shimmer 1.4s ease-in-out infinite;"
  />
</DocumentFragment>
`;

exports[`Storybook visual-regression / Skeleton > renders a skeleton card 1`] = `
<DocumentFragment>
  <div
    class="rounded-xl border border-gray-800/60 bg-gray-900/40 p-5 space-y-4"
  >
    <div
      class="animate-pulse bg-gradient-to-r from-gray-800/40 via-gray-700/40 to-gray-800/40 bg-[length:200%_100%] rounded-md h-4 w-1/3"
      style="animation: skeleton-shimmer 1.4s ease-in-out infinite;"
    />
    <div
      class="animate-pulse bg-gradient-to-r from-gray-800/40 via-gray-700/40 to-gray-800/40 bg-[length:200%_100%] rounded-md h-8 w-2/3"
      style="animation: skeleton-shimmer 1.4s ease-in-out infinite;"
    />
    <div
      class="animate-pulse bg-gradient-to-r from-gray-800/40 via-gray-700/40 to-gray-800/40 bg-[length:200%_100%] rounded-md h-3 w-full"
      style="animation: skeleton-shimmer 1.4s ease-in-out infinite;"
    />
    <div
      class="animate-pulse bg-gradient-to-r from-gray-800/40 via-gray-700/40 to-gray-800/40 bg-[length:200%_100%] rounded-md h-3 w-4/5"
      style="animation: skeleton-shimmer 1.4s ease-in-out infinite;"
    />
  </div>
</DocumentFragment>
`;

exports[`Storybook visual-regression / Skeleton > renders a skeleton list 1`] = `
<DocumentFragment>
  <div
    class="space-y-3"
  >
    <div
      class="animate-pulse bg-gradient-to-r from-gray-800/40 via-gray-700/40 to-gray-800/40 bg-[length:200%_100%] rounded-md h-14 w-full"
      style="animation: skeleton-shimmer 1.4s ease-in-out infinite;"
    />
    <div
      class="animate-pulse bg-gradient-to-r from-gray-800/40 via-gray-700/40 to-gray-800/40 bg-[length:200%_100%] rounded-md h-14 w-full"
      style="animation: skeleton-shimmer 1.4s ease-in-out infinite;"
    />
    <div
      class="animate-pulse bg-gradient-to-r from-gray-800/40 via-gray-700/40 to-gray-800/40 bg-[length:200%_100%] rounded-md h-14 w-full"
      style="animation: skeleton-shimmer 1.4s ease-in-out infinite;"
    />
  </div>
</DocumentFragment>
`;

exports[`Storybook visual-regression / StatusPill > renders the cancelled status 1`] = `
<DocumentFragment>
  <span
    class="inline-flex items-center gap-1.5 rounded-full border px-2 py-0.5 text-[11px] font-medium text-gray-400 bg-gray-800/60 border-gray-700"
  >
    <span
      aria-hidden="true"
      class="h-1.5 w-1.5 rounded-full bg-current"
    />
    Cancelled
  </span>
</DocumentFragment>
`;

exports[`Storybook visual-regression / StatusPill > renders the completed status 1`] = `
<DocumentFragment>
  <span
    class="inline-flex items-center gap-1.5 rounded-full border px-2 py-0.5 text-[11px] font-medium text-green-300 bg-green-900/30 border-green-800"
  >
    <span
      aria-hidden="true"
      class="h-1.5 w-1.5 rounded-full bg-current"
    />
    Completed
  </span>
</DocumentFragment>
`;

exports[`Storybook visual-regression / StatusPill > renders the failed status 1`] = `
<DocumentFragment>
  <span
    class="inline-flex items-center gap-1.5 rounded-full border px-2 py-0.5 text-[11px] font-medium text-red-300 bg-red-900/30 border-red-800"
  >
    <span
      aria-hidden="true"
      class="h-1.5 w-1.5 rounded-full bg-current"
    />
    Failed
  </span>
</DocumentFragment>
`;

exports[`Storybook visual-regression / StatusPill > renders the pending status 1`] = `
<DocumentFragment>
  <span
    class="inline-flex items-center gap-1.5 rounded-full border px-2 py-0.5 text-[11px] font-medium text-yellow-300 bg-yellow-900/30 border-yellow-800"
  >
    <span
      aria-hidden="true"
      class="h-1.5 w-1.5 rounded-full bg-current"
    />
    Pending
  </span>
</DocumentFragment>
`;

exports[`Storybook visual-regression / StatusPill > renders the running status 1`] = `
<DocumentFragment>
  <span
    class="inline-flex items-center gap-1.5 rounded-full border px-2 py-0.5 text-[11px] font-medium text-blue-300 bg-blue-900/30 border-blue-800"
  >
    <span
      aria-hidden="true"
      class="h-1.5 w-1.5 rounded-full bg-current animate-pulse"
    />
    Running
  </span>
</DocumentFragment>
`;

exports[`Storybook visual-regression / StatusPill > renders the unknown status 1`] = `
<DocumentFragment>
  <span
    class="inline-flex items-center gap-1.5 rounded-full border px-2 py-0.5 text-[11px] font-medium text-gray-500 bg-gray-900/40 border-gray-800"
  >
    <span
      aria-hidden="true"
      class="h-1.5 w-1.5 rounded-full bg-current"
    />
    Unknown
  </span>
</DocumentFragment>
`;
